CREATE TABLE library.loan_states (
  id SERIAL PRIMARY KEY,
  name VARCHAR(30) NOT NULL
);